<resources>
    <string name="app_name">Sam Product</string>

    <!-- initial -->
    <string name="app_toolbar_subject">قطعات سام</string>
    <string name="btn_enter">ورود</string>
    <string name="tv_search">جستوجو</string>


    <!-- menu items text -->
    <string name="txt_shelf_edit">اصلاح قفسه</string>
    <string name="sabt_shomaresh">ثبت شمارش</string>
    <string name="txt_draft_list">لیست حواله</string>
    <string name="txt_perm_list">لیست مجوز</string>
    <string name="txt_receipt_list">لیست رسید</string>
    <string name="kardex">کاردکس</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login_hint_username">نام کاربری</string>
    <string name="login_hint_password">رمز عبور</string>
    <string name="login_vurud">ورود</string>
    <string name="menu_txt_product">تعریف محصول</string>
    <string name="menu_txt_mojavez_havale">حواله از مجوز</string>
    <string name="menu_txt_gozaresh_mojudi">گزارش موجودی</string>
    <string name="menu_txt_control">کنترل میاندوره</string>
    <string name="txt_tech_no">شماره فنی</string>
    <string name="txt_product_name">نام کالا:</string>
    <string name="txt_product_name_simple">نام کالا</string>
    <string name="txt_shelf_numb">شماره قفسه:</string>
    <string name="txt_enter_new_shelf_num">شماره قفسه جدید را وارد کنید:</string>
    <string name="confirm">تایید</string>

    <!-- QRcode -->
    <string name="state_toast_premission_granted_persian">مجوز اعطا شد.</string>
    <string name="state_toast_premission_denied_persian">مجوز رد شد، دسترسی به وضعیت گوشی امکان پذیر نیست</string>
    <string name="state_toast_premission_allow_persian">برای ورود نیاز به تایید مجوز دارید</string>

    <string name="txt_shelf_unit">واحد:</string>
    <string name="txt_enter_new_counting">شمارش جدید را وارد کنید :</string>
    <string name="txt_inventory_dd">موجودی:</string>
    <string name="txt_current_counting">شمارش فعلی:</string>
    <string name="save">ذخیره</string>
    <string name="txt_shelf_numb_simple">شماره قفسه</string>
    <string name="txt_noghte_sefaresh">نقطه سفارش</string>
    <string name="txt_tedad_sefaresh">تعداد سفارش</string>
    <string name="txt_cost">قیمت واحد</string>
    <string name="txt_baste">بسته</string>
    <string name="txt_product_checkbox_arzesh_afzoode">دارای مالیات ارزش افزوده</string>
    <string name="txt_unit">واحد</string>
    <string name="txt_spin_type">نوع قطعه</string>
    <string name="txt_product_descrip">توضیحات</string>
    <string name="txt_date">تاریخ: 1398/08/02</string>
    <string name="txt_shomare_havale">شماره حواله:</string>
    <string name="txt_perm_num">شماره مجوز:</string>
    <string name="txt_cust_name">نام مشتری:</string>
    <string name="txt_exit_app">خروج</string>
    <string name="txt_receipt_num_dd">شماره رسید:</string>
    <string name="txt_pre_factor_numb_dd">شماره پیش فاکتور:</string>
    <string name="txt_about_us">درباره ما</string>
    <string name="txt_register_phone"> <u>ثبت دستگاه؟</u></string>
    <string name="txt_reject">عدم تایید</string>
    <string name="txt_shomare_fanni">شماره فنی:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_draft_num">شماره حواله</string>
    <string name="txt_date_list">تاریخ</string>
    <string name="txt_cust_name_2">نام مشتری</string>
    <string name="txt_perm_num_2">شماره مجوز</string>
    <string name="txt_draft_type">نوع حواله</string>
    <string name="txt_user_name">نام کاربر</string>
    <string name="txt_condition">وضعیت</string>
    <string name="txt_products">کالاها</string>
    <string name="dash">-</string>
    <string name="txt_ok">باشه</string>
    <string name="txt_email">ایمیل</string>
    <string name="txt_need_permission">برای ثبت دستگاه نیاز به اهدای مجوز دارید</string>
    <string name="txt_reg_device">جهت ثبت دستگاه در سامانه، با ادمین تماس بگیرید.</string>
    <string name="txt_receiver">تحویل‌گیرنده</string>
    <string name="txt_service_page">برگ سرویس</string>
    <string name="txt_condition_dd">وضعیت:</string>
    <string name="txt_product_source_dd">مبدأ کالا:</string>
    <string name="txt_receipt_type_dd">نوع رسید:</string>
    <string name="txt_reg_device_send_email">همچنین می‌توانید درخواست خود را از طریق پست الکترونیکی ارسال کنید.</string>
    <string name="txt_pre_factor_numb">شماره پیش‌فاکتور</string>
    <string name="txt_receipt_num">شماره رسید</string>
    <string name="txt_product_source">مبدأ کالا</string>
    <string name="txt_receipt_type">نوع رسید</string>
    <string name="txt_descrip_1">توضیح 1</string>
    <string name="txt_descrip_2">توضیح 2</string>
    <string name="txt_descrip_3">توضیح 3</string>
    <string name="txt_set_date">اعمال تاریخ</string>
    <string name="txt_date_spin">تاریخ</string>
    <string name="reg">ثبت</string>
    <string name="txt_cardex">کاردکس کالا</string>
    <string name="txt_cancel">لغو</string>
    <string name="txt_tedad">تعداد</string>
    <string name="txt_unit_dd">واحد:</string>
    <string name="txt_tedad_dd">تعداد:</string>
    <string name="txt_buy_cost">قیمت خرید:</string>
    <string name="txt_order_id">شماره سفارش:</string>
    <string name="txt_incoming">وارده</string>
    <string name="txt_outgoing">صادره</string>
    <string name="txt_inventory">موجودی</string>
    <string name="txt_exit_app_dialog_message">آیا قصد خروج از حساب کاربری خود را دارید؟</string>
    <string name="txt_counting_1">شمارش 1</string>
    <string name="txt_counting_2">شمارش 2</string>
    <string name="txt_count_1_2_result">نتیجه شمارش اول‌‌ و دوم</string>
    <string name="txt_counting_3">شمارش 3</string>
    <string name="txt_result">نتیجه</string>
    <string name="txt_counting_1_dd">شمارش اول:</string>
    <string name="txt_counting_2_dd">شمارش دوم:</string>
    <string name="txt_count_1_2_result_dd">نتیجه شمارش اول و دوم:</string>
    <string name="txt_counting_3_dd">شمارش سوم:</string>
    <string name="txt_result_dd">نتیجه:</string>
    <string name="txt_counting_reg_list">لیست شمارش</string>
    <string name="txt_please_enter_username">لطفا نام کاربری را وارد نمایید</string>
    <string name="txt_please_enter_password">لطفا رمز عبور را وارد نمایید</string>
    <string name="txt_error">خطا</string>
    <string name="txt_imei_not_registered">شما برای ورود نیاز به اعطای مجوز \"دسترسی به وضعیت تلفن\" دارید.</string>
    <string name="txt_eta">اعطا</string>
    <string name="txt_wrong_name_pass">نام کاربری یا رمز عبور اشتباه و یا دستگاه شما در سامانه ثبت نشده است.</string>
    <string name="enter_date_correctly">لطفا تاریخ را به فرم صحیح **/**/**13 وارد کنید</string>
    <string name="please_fill">خالی است</string>
    <string name="list_tv_count_value">تعداد</string>
    <string name="whitespace">\u0020</string>
    <string name="zero">0</string>
    <string name="txt_draft_from_perm">حواله از مجوز</string>
    <string name="txt_date_simple">تاریخ</string>
    <string name="txt_edit">ویرایش</string>
    <string name="txt_delete">حذف</string>
    <string name="txt_back">بازگشت</string>
    <string name="txt_shomare_fanni_2">شماره فنی</string>
    <string name="put_zero">(حداقل مقدار مجاز = 0)</string>
    <string name="txt_see_products">مشاهده کالاها</string>
    <string name="txt_register_draft">ثبت حواله</string>
    <string name="txt_product">کالا</string>
    <string name="txt_reg_changes">ثبت تغییرات</string>
    <string name="txt_successfully_saved">حواله با موفقیت انجام شد</string>
    <string name="txt_solved">حله</string>
</resources>
