<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white_FFFFFF"
    android:fitsSystemWindows="true"
    android:layoutDirection="rtl"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MidtermControlActivity">

    <include
        android:id="@+id/activity_shelf_toolbar"
        layout="@layout/toolbar_custom_list" />

    <me.dm7.barcodescanner.zxing.ZXingScannerView
        android:id="@+id/scanner_midterm"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/activity_shelf_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/shelf_edit_side_margin"
        android:layout_marginTop="@dimen/margin32"
        android:layout_marginEnd="@dimen/shelf_edit_side_margin"
        android:layout_marginBottom="@dimen/margin16"
        android:background="@drawable/shape_rect_white"
        android:fitsSystemWindows="true"
        app:borderColor="@color/color_blue_theme_004677"
        app:borderLength="30dp"
        app:borderWidth="2dp"
        app:finderOffset="@dimen/margin32"
        app:laserColor="@color/color_red_refuse"
        app:laserEnabled="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_midterm_et_shomare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scanner_midterm"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/shelf_edit_side_margin"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginEnd="@dimen/shelf_edit_side_margin"
        android:gravity="start"
        android:textColorHint="@color/color_gray_text"
        app:boxBackgroundColor="@color/color_white_FFFFFF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/radius10"
        app:boxCornerRadiusBottomStart="@dimen/radius10"
        app:boxCornerRadiusTopEnd="@dimen/radius10"
        app:boxCornerRadiusTopStart="@dimen/radius10"
        app:boxStrokeColor="@color/color_blue_theme_004677"
        app:boxStrokeWidth="1dp"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/hintTextLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_shelf_et_shomare_fanni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:layout_marginBottom="@dimen/margin8"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:fontFamily="@font/iran_sans_web"
            android:gravity="start|center"
            android:hint="@string/shomare_fanni"
            android:inputType="text"
            android:layoutDirection="ltr"
            android:paddingStart="@dimen/margin24"
            android:paddingTop="@dimen/margin12"
            android:paddingEnd="@dimen/margin48"
            android:paddingBottom="@dimen/margin12"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/color_gray_text"
            android:textColorHint="@color/color_black_000000"
            android:textDirection="ltr"
            android:textSize="@dimen/text_size21" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/activity_midterm_pbar"
        style="@style/SpinKitView.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/relative_midterm_tv_unit"
        android:layout_centerHorizontal="true"
        android:translationY="-14dp"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent" />

    <TextView
        android:id="@+id/relative_midterm_tv_product_name"
        style="@style/AppFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_midterm_et_shomare"
        android:layout_marginStart="@dimen/margin64"
        android:layout_marginTop="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin64"
        android:gravity="center"
        android:text="@string/txt_product_name"
        android:textColor="@color/color_gray_text"
        android:textSize="@dimen/text_size18" />

    <TextView
        style="@style/AppFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/relative_midterm_tv_product_name"
        android:layout_marginEnd="@dimen/margin64"
        android:layout_toEndOf="@id/relative_midterm_tv_product_name"
        android:gravity="center"
        android:text="@string/dash"
        android:textColor="@color/color_black_000000"
        android:textSize="@dimen/text_size18" />


    <TextView
        android:id="@+id/relative_midterm_tv_shelf_number"
        style="@style/AppFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_midterm_tv_product_name"
        android:layout_marginStart="@dimen/margin64"
        android:layout_marginTop="@dimen/margin12"
        android:layout_marginEnd="@dimen/margin64"
        android:text="@string/txt_shelf_numb"
        android:textColor="@color/color_gray_text"
        android:textSize="@dimen/text_size18" />

    <TextView
        style="@style/AppFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/relative_midterm_tv_shelf_number"
        android:layout_marginEnd="@dimen/margin64"
        android:layout_toEndOf="@id/relative_midterm_tv_shelf_number"
        android:text="@string/dash"
        android:textColor="@color/color_black_000000"
        android:textSize="@dimen/text_size18" />


    <TextView
        android:id="@+id/relative_midterm_tv_unit"
        style="@style/AppFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_midterm_tv_shelf_number"
        android:layout_marginStart="@dimen/margin64"
        android:layout_marginTop="@dimen/margin12"
        android:layout_marginEnd="@dimen/margin64"
        android:text="@string/txt_shelf_unit"
        android:textColor="@color/color_gray_text"
        android:textSize="@dimen/text_size18" />

    <TextView
        style="@style/AppFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/relative_midterm_tv_unit"
        android:layout_marginEnd="@dimen/margin64"
        android:layout_toEndOf="@id/relative_midterm_tv_unit"
        android:text="@string/dash"
        android:textColor="@color/color_black_000000"
        android:textSize="@dimen/text_size18" />

    <TextView
        android:id="@+id/relative_midterm_tv_inventory"
        style="@style/AppFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_midterm_tv_unit"
        android:layout_marginStart="@dimen/margin64"
        android:layout_marginTop="@dimen/margin12"
        android:layout_marginEnd="@dimen/margin32"
        android:text="@string/txt_inventory"
        android:textColor="@color/color_gray_text"
        android:textSize="@dimen/text_size18" />

    <TextView
        android:id="@+id/txt_unit"
        style="@style/AppFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/relative_midterm_tv_inventory"
        android:layout_marginEnd="@dimen/margin64"
        android:layout_toEndOf="@id/relative_midterm_tv_inventory"
        android:text="@string/dash"
        android:textColor="@color/color_black_000000"
        android:textSize="@dimen/text_size18" />

    <TextView
        android:id="@+id/relative_midterm_tv_current_counting"
        style="@style/AppFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txt_unit"
        android:layout_marginStart="@dimen/margin32"
        android:layout_marginTop="@dimen/margin24"
        android:layout_marginEnd="@dimen/margin32"
        android:layout_toEndOf="@id/txt_unit"
        android:text="@string/txt_current_counting"
        android:textColor="@color/color_gray_text"
        android:textSize="@dimen/text_size18" />

    <TextView
        style="@style/AppFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/relative_midterm_tv_current_counting"
        android:layout_marginEnd="@dimen/margin64"
        android:layout_toEndOf="@id/relative_midterm_tv_current_counting"
        android:text="@string/dash"
        android:textColor="@color/color_black_000000"
        android:textSize="@dimen/text_size18" />

    <TextView
        android:id="@+id/relative_midterm_tv_shelf_enter_new"
        style="@style/AppFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_midterm_tv_inventory"
        android:layout_marginStart="@dimen/margin64"
        android:layout_marginTop="@dimen/margin24"
        android:layout_marginEnd="@dimen/margin8"
        android:fitsSystemWindows="true"
        android:text="@string/txt_enter_new_counting"
        android:textColor="@color/color_gray_text"
        android:textSize="@dimen/text_size18" />


    <EditText
        android:id="@+id/activity_shelf_et_enter_shelf"
        style="@style/AppFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/relative_midterm_tv_shelf_enter_new"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_toEndOf="@id/relative_midterm_tv_shelf_enter_new"
        android:backgroundTint="@color/color_blue_theme_004677"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:lines="1"
        android:maxEms="5"
        android:maxLength="15"
        android:maxLines="1"
        android:minEms="4"
        android:textAlignment="center"
        android:textColor="@color/color_black_000000"
        android:textSize="@dimen/text_size18" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin32"
        android:layout_marginEnd="@dimen/margin32"
        android:layout_marginBottom="@dimen/margin32"
        android:background="@drawable/selector_btn_save"
        android:fontFamily="@font/iran_sans_web"
        android:text="@string/save"
        android:textColor="@color/color_white_FFFFFF"
        android:textSize="@dimen/text_size21" />

</RelativeLayout>