<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_marginStart="@dimen/margin8"
    android:layout_marginTop="@dimen/margin8"
    android:layout_marginEnd="@dimen/margin8"
    android:layout_marginBottom="@dimen/margin12"
    android:layoutDirection="rtl"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">


    <LinearLayout
        android:id="@+id/relative_linear_draft_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:drawableStart="@drawable/ic_build_black_24dp"
                android:drawablePadding="@dimen/margin8"
                android:drawableTint="@color/color_green_confirm"
                android:fontFamily="@font/iran_sans_web"
                android:gravity="center|start"
                android:padding="@dimen/margin4"
                android:text="@string/txt_shomare_fanni"
                android:textColor="@color/color_green_confirm"
                android:textSize="@dimen/text_size13" />

            <TextView
                android:id="@+id/adapter_draft_info_all_rv_tech_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/iran_sans_web"
                android:gravity="center"
                android:padding="@dimen/margin4"
                android:alpha="0.75"
                android:text="H98-E-5"
                android:textColor="@color/color_black_000000"
                android:textSize="@dimen/text_size13" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:drawableStart="@drawable/ic_product"
                android:drawablePadding="@dimen/margin8"
                android:drawableTint="@color/color_green_confirm"
                android:fontFamily="@font/iran_sans_web"
                android:gravity="center|start"
                android:padding="@dimen/margin4"
                android:text="@string/txt_product_name"
                android:textColor="@color/color_green_confirm"
                android:textSize="@dimen/text_size13" />

            <TextView
                android:id="@+id/adapter_draft_info_all_rv_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/iran_sans_web"
                android:gravity="center"
                android:padding="@dimen/margin4"
                android:alpha="0.75"
                android:text="OIL"
                android:textColor="@color/color_black_000000"
                android:textSize="@dimen/text_size13" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:drawableStart="@drawable/ic_ac_unit_black_24dp"
                android:drawablePadding="@dimen/margin8"
                android:drawableTint="@color/color_green_confirm"
                android:fontFamily="@font/iran_sans_web"
                android:gravity="center|start"
                android:padding="@dimen/margin4"
                android:text="@string/txt_unit_dd"
                android:textColor="@color/color_green_confirm"
                android:textSize="@dimen/text_size13" />

            <TextView
                android:id="@+id/adapter_draft_info_all_rv_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/iran_sans_web"
                android:gravity="center"
                android:padding="@dimen/margin4"
                android:alpha="0.75"
                android:text="32"
                android:textColor="@color/color_black_000000"
                android:textSize="@dimen/text_size13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:drawableStart="@drawable/ic_inventory"
                android:drawablePadding="@dimen/margin8"
                android:drawableTint="@color/color_green_confirm"
                android:fontFamily="@font/iran_sans_web"
                android:gravity="center|start"
                android:padding="@dimen/margin4"
                android:text="@string/txt_inventory"
                android:textColor="@color/color_green_confirm"
                android:textSize="@dimen/text_size13" />

            <TextView
                android:id="@+id/adapter_draft_info_all_rv_inventory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/iran_sans_web"
                android:gravity="center"
                android:alpha="0.75"
                android:padding="@dimen/margin4"
                android:text="32"
                android:textColor="@color/color_black_000000"
                android:textSize="@dimen/text_size13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:drawableStart="@drawable/ic_current_count"
                android:drawablePadding="@dimen/margin8"
                android:drawableTint="@color/color_green_confirm"
                android:fontFamily="@font/iran_sans_web"
                android:gravity="center|start"
                android:padding="@dimen/margin4"
                android:text="@string/txt_tedad_dd"
                android:textColor="@color/color_green_confirm"
                android:textSize="@dimen/text_size13" />

            <TextView
                android:id="@+id/adapter_draft_info_all_rv_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/iran_sans_web"
                android:gravity="center"
                android:alpha="0.75"
                android:padding="@dimen/margin4"
                android:text="20"
                android:textColor="@color/color_black_000000"
                android:textSize="@dimen/text_size13" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>